KgThemeProvider: fix generating broken full path theme id due to fs symlinks

relativeToApplications() was using QFileInfo(file).canonicalFilePath()
to compare against non-canonicalized directories returned by
QStandardPaths, thus missing out in case the file was in a path with
symlinks, resulting in ids with full absolute path.

This patch fixes that by calculating the id from the known one subdir name
and the desktop file name directly.

BUG: 457951